tests/baselines/reference/unusedSingleParameterInFunctionExpression.errors.txt
tests/cases/compiler/unusedSingleParameterInFunctionExpression.ts(1,21): error TS6133: 'person' is declared but never used.
tests/cases/compiler/unusedSingleParameterInFunctionExpression.ts(2,9): error TS6133: 'unused' is declared but never used.


==== tests/cases/compiler/unusedSingleParameterInFunctionExpression.ts (2 errors) ====
    var func = function(person: string) {
                        ~~~~~~
!!! error TS6133: 'person' is declared but never used.
        var unused = 20;
            ~~~~~~
!!! error TS6133: 'unused' is declared but never used.
    }